--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "postinstall": "node scripts/fetch-models.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fetch-models": "node scripts/fetch-models.js"
   },
   "eslintConfig": {
     "extends": [
@@ -39,13 +40,8 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^24.6.1",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^3.4.1"
   }
 }
