--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon server/server.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "install-all": "npm install && cd client && npm install"
+    "install-all": "npm install && cd client && npm install",
+    "vercel-build": "cd client && npm install --legacy-peer-deps && npm run build"
   },
   "keywords": ["school", "attendance", "face-recognition", "tjkt"],
   "author": "",
