--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,27 @@
 {
+  "version": 2,
   "builds": [
-    { "src": "api/**/*.js", "use": "@vercel/node" },
-    { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+    { 
+      "src": "api/**/*.js", 
+      "use": "@vercel/node" 
+    },
+    { 
+      "src": "client/package.json", 
+      "use": "@vercel/static-build", 
+      "config": { 
+        "distDir": "build",
+        "installCommand": "cd client && npm install --legacy-peer-deps",
+        "buildCommand": "cd client && npm run build"
+      } 
+    }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "client/build/$1" }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
 
 
