--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,7 @@
     "postinstall": "node scripts/fetch-models.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fetch-models": "node scripts/fetch-models.js",
-    "preinstall": "npm install --legacy-peer-deps"
+    "fetch-models": "node scripts/fetch-models.js"
   },
   "eslintConfig": {
     "extends": [
@@ -43,12 +42,18 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^4.9.5",
+    "@types/node": "^16.18.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0"
   },
   "overrides": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "ajv": "^6.12.6"
   },
   "resolutions": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "ajv": "^6.12.6"
   }
 }
