--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
     "install-all": "npm install && cd client && npm install",
-    "vercel-build": "cd client && npm install --legacy-peer-deps && npm run build"
+    "vercel-build": "cd client && npm install --legacy-peer-deps && npm run build",
+    "postinstall": "cd client && npm install --legacy-peer-deps"
   },
   "keywords": ["school", "attendance", "face-recognition", "tjkt"],
   "author": "",
